--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@
     <script>
       feather.replace();
     </script>
+
+    <!-- My JavaScript-->
+    <script src="js/script.js">
+    </script>
   </body>
+
 </html>
