--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     </nav>
     <!-- Navbar end -->
 
+    <!-- Hero Section start -->
+  <section class="hero" id="home">
+      <main class="content">
+        <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, enim.</p>
+        <a href="#" class="cta">Beli Sekarang</a>
+      </main>
+  </section>
+  <!-- Hero Section end -->
+
     <script>
       feather.replace();
     </script>
